# difficulty-neon

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json
lib/: index.d.ts  index.js
native/: Cargo.toml
native/src/: lib.rs
