[package]
name = "difficulty-adjuster"
version = "0.1.0"
authors = ["niall <niall@hycon.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "difficulty_adjuster"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
